--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "0.0.0",
   "description": "just a toy",
   "main": "index.js",
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
+    "bower": "^1.3.12",
     "coffee-script": "^1.8.0",
     "dotenv": "^0.4.0",
     "express": "^4.9.8",
+    "gulp": "^3.8.8",
+    "gulp-coffeeify": "^0.1.2",
+    "gulp-concat": "^2.4.1",
+    "gulp-stylus": "^1.3.3",
     "jade": "^1.7.0",
     "twitter": "^0.2.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "bower install && gulp"
   },
   "author": "",
   "license": "ISC"
